Fixed an issue with covers on mobile.

--- a/src/styles/slides/_cover.sass
+++ b/src/styles/slides/_cover.sass
@@ -19,16 +19,10 @@
 
       .cover-wrap
         position: absolute
-        top: 50%
-        left: 50%
-        width: auto
-        height: auto
-        min-width: 100%
-        min-height: 100%
-        background-repeat: no-repeat
-        background-position: 50% 50%
-        background-size: contain
-        transform: translate(-50%, -50%)
+        top: 0px
+        left: 0px
+        width: 100%
+        height: 100%
         opacity: 0
         transition: opacity $speed_metal linear
 
@@ -39,6 +33,9 @@
           position: absolute
           top: 0px
           left: 50%
+          background-repeat: no-repeat
+          background-position: 50% 50%
+          background-size: contain
           transform: translate(-50%, 0)
 
           &.blend:before,
